# libmidi

./: .gitignore  CMakeLists.txt  read_midi.c
include/: byte_buffer.h  mem_file.h  midi.h
src/: byte_buffer.c  mem_file.c  midi.c
